kustomize/bases/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    name: example
