kustomize/bases/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      app.kubernetes.io/instance: whoami-example
  template:
    metadata:
      # These are not needed by considered a good practice
      labels:
        app.kubernetes.io/name: whoami
        app.kubernetes.io/instance: whoami-example
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
