kustomize/bases/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami-example
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/instance: whoami-example
